<resources>
    <string name="app_name">DCStart</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_bbs">论坛</string>
    <string name="title_homepage">首页</string>
    <string name="title_myclass">我的教务</string>
    <string name="title_personal">个人</string>
    <string name="NoLoadPage_text1">您还未登录</string>
    <string name="NoLoadPage_LogIn">登录</string>
    <string name="NoLoadPage_Register">注册</string>
    <string name="Register_Register">注册</string>
    <string name="RegisterPage_Reset">重置</string>
    <string name="listview_title">标题</string>
    <string name="listview_time">2019-11-2</string>
    <string name="listview_context">内容</string>
    <string name="name">账号/用户名</string>
    <string name="app_nameIT">大话IT</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="send">发帖</string>
    <string name="sex">性别</string>
    <string name="modifycode">验证码</string>
    <string name="password">密码</string>
    <string name="password_sure">确认密码</string>
    <string name="forget_pw">忘记密码？</string>
    <string name="visit">游客登陆</string>
    <string name="reg">注册</string>
    <string name="look">查看回复</string>
    <string name="reply">回复</string>
    <string name="del">删除</string>
    <string name="top">置顶</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="section">版块:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
