<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">
    <ImageView
        android:id="@+id/image_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#000"
        android:scaleType="fitCenter"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_title"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_time"
            android:textSize="20sp"
            android:textColor="@color/colorGray"/>
        <TextView
            android:id="@+id/tv_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview_context"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorGrayDark"/>

    </LinearLayout>

</LinearLayout>
