<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Activity.RegisterActivity">

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="用户名"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_username"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_wrapHeight="63"
        tools:layout_conversion_wrapWidth="141" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/editshape"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_wrapHeight="118"
        tools:layout_conversion_wrapWidth="53" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="23dp"

        android:layout_marginRight="23dp"
        android:text="密码"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_confirmpassword"
        app:layout_constraintTop_toTopOf="@+id/textView_username"
        tools:layout_conversion_wrapHeight="63"
        tools:layout_conversion_wrapWidth="141" />

    <TextView
        android:id="@+id/textView_confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="确认密码"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toTopOf="@+id/textView_username"
        tools:layout_conversion_wrapHeight="63"
        tools:layout_conversion_wrapWidth="141" />

    <TextView
        android:id="@+id/textView_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="手机号"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/editText_tel"
        app:layout_constraintTop_toTopOf="@+id/textView_username"
        tools:layout_conversion_wrapHeight="63"
        tools:layout_conversion_wrapWidth="141" />

    <TextView
        android:id="@+id/textView_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="300dp"
        android:text="@string/modifycode"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_username"
        tools:layout_conversion_wrapHeight="63"
        tools:layout_conversion_wrapWidth="141" />

    <TextView
        android:id="@+id/textView_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="56dp"
        android:text="@string/sex"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_modify"
        app:layout_constraintEnd_toStartOf="@+id/radiogroup_sex"
        app:layout_constraintTop_toTopOf="@+id/textView_username"
        tools:layout_conversion_wrapHeight="63"
        tools:layout_conversion_wrapWidth="141" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="279dp"
        android:layout_marginRight="279dp"
        android:background="@drawable/editshape"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_username"
        tools:layout_conversion_wrapHeight="118"
        tools:layout_conversion_wrapWidth="53" />

    <EditText
        android:id="@+id/editText_tel"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="279dp"
        android:layout_marginRight="279dp"
        android:background="@drawable/editshape"
        android:inputType="phone"
        android:maxLines="1"
        android:numeric="integer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_username"
        tools:layout_conversion_wrapHeight="118"
        tools:layout_conversion_wrapWidth="53" />

    <EditText
        android:id="@+id/editText_code"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="279dp"
        android:layout_marginRight="279dp"
        android:background="@drawable/editshape"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_username"
        tools:layout_conversion_wrapHeight="118"
        tools:layout_conversion_wrapWidth="53" />

    <EditText
        android:id="@+id/editText_confirmpassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="279dp"
        android:layout_marginRight="279dp"
        android:background="@drawable/editshape"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_username"
        tools:layout_conversion_wrapHeight="118"
        tools:layout_conversion_wrapWidth="53" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="480dp"
        android:text="@string/RegisterPage_Reset"
        app:layout_constraintStart_toEndOf="@+id/button_sumbit"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sumbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Register_Register"
        app:layout_constraintEnd_toStartOf="@+id/button_reset"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radiogroup_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/textView_modify"
        app:layout_constraintTop_toBottomOf="@+id/editText_tel">

        <RadioButton
            android:id="@+id/sexradio_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Man" />

        <RadioButton
            android:id="@+id/sexradio_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Woman" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>


    </RadioGroup>

    <ImageView
        android:id="@+id/codeimage"
        android:layout_width="125dp"
        android:layout_height="40dp"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toEndOf="@+id/editText_code"
        app:layout_constraintTop_toBottomOf="@+id/editText_tel"
        app:srcCompat="@android:color/background_light" />


</androidx.constraintlayout.widget.ConstraintLayout>